name               : graft
version            : 0.2.0.7
synopsis           : Graph algorithms
description        : Graph algorithms

license            : MIT
license-file       : LICENSE
author             : Brian W Bush <code@functionally.io>
maintainer         : Brian W Bush <code@functionally.io>
copyright          : (c) 2018 Brian W Bush
category           : Data
stability          : Experimental
build-type         : Simple
cabal-version      : >= 1.10
homepage           : https://bitbucket.org/functionally/graft
bug-reports        : https://bwbush.atlassian.net/projects/HGRAFT/issues/
package-url        : https://bitbucket.org/functionally/graft/downloads/graft-0.1.0.0.tar.gz

source-repository head
  type             : git
  location         : https://bitbucket.org/functionally/graft.git

library
  exposed-modules  : Data.Graph.IO
                     Data.Graph.Legacy
                     Data.Graph.Legacy.Algorithms
                     Data.Graph.Legacy.Examples
                     Data.Graph.Legacy.IO
                     Data.Graph.Legacy.Tied
                     Data.Graph.Legacy.Types
                     Data.Graph.MaximumFlow
                     Data.Graph.MaximumFlow.Contextual
                     Data.Graph.ShortestPath
                     Data.Graph.ShortestPath.Contextual
                     Data.Graph.ShortestPath.Monadic
                     Data.Graph.Types
                     Data.Graph.Types.Adjacency
                     Data.Graph.Types.MapGraph
                     Data.Graph.Types.TiedGraph
                     Data.Graph.Types.Util
                     Data.Graph.Types.Weight
  hs-source-dirs   : src
  build-depends    : base         >= 4 && < 5
                   , containers
                   , heaps
                   , monoid-absorbing
                   , mtl
                   , non-negative
                   , raft
                   , stringbuilder
  exposed          : True
  buildable        : True
  ghc-options      : -O2 -Wall
  default-language : Haskell2010


test-suite test-graft
  type            : exitcode-stdio-1.0
  hs-source-dirs  : src
  main-is         : Test.hs
  build-depends   : base
                  , containers
                  , fgl
                  , fgl-arbitrary
                  , heaps
                  , hmatrix-glpk
                  , monoid-absorbing
                  , mtl
                  , non-negative
                  , QuickCheck
                  , raft
                  , stringbuilder
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -O2 -Wall
